# Reachy-Assistant

./: .gitignore  README.md  pyproject.toml
examples/: mic_test.py  record_test.py  run_assistant.py  test_action_mapper.py
src/reachy_assistant/: __init__.py  action_mapper.py  assistant.py  camera_handler.py  gateway.py  intent_handlers.py  key_listener.py  main.py
src/reachy_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/reachy_assistant/agent/: __init__.py  memory_manager.py  runtime.py
src/reachy_assistant/channels/: __init__.py  telegram_channel.py  voice_channel.py  whatsapp_channel.py
src/reachy_assistant/config/: MEMORY.md  SOUL.md  STATE.json  USER.md
src/reachy_assistant/skills/: __init__.py  base.py  express_emotion.py  take_picture.py  toggle_modality.py
